--- a/src/header/HeaderLearningResponsive.scss
+++ b/src/header/HeaderLearningResponsive.scss
@@ -155,7 +155,10 @@
     right: 0 !important;
     width: 100vw;
     height: 100vh;
-    transform: translate3d(0, 0, 0) !important;
+
+    &.show {
+      transform: translate3d(0, 0, 0) !important;
+    }
     overflow-x: hidden;
   }
   .menu-user {
